# omnia

./: .gitignore  .gitleaks.toml  ARCHITECTURE_REFACTOR.md  README.md  omnia.sh
.github/workflows/: .gitleaks.toml  ansible-lint.yml  bandit.yml  gitleaks.yml  pip-audit.yml  pylint.yml  pytest.yml  shellcheck.yml
input/: local_repo_config.yml  omnia_config.yml  software_config.json  storage_config.yml
provision/: provision.yml
src/build_manager/: REFACTORING_SUMMARY.md  ansible.cfg  build_manager.yml
src/build_manager/input/: build_credentials.yml  build_manager_config.yml
src/build_manager/playbooks/: ansible.cfg  build_image_aarch64.yml  build_image_x86_64.yml  prepare_build_manager.yml  rollback_build_manager.yml  upgrade_build_manager.yml
src/build_manager/samples/: build_status.yml  repo_status.yml
src/build_manager/vars/: image_vars.yml
src/build_stream/: INPUT_CONTRACT.md  OUTPUT_CONTRACT.md  README.md  ansible.cfg  build_stream.yml  container.py  generate_catalog.py  pytest.ini  requirements-dev.txt  requirements.txt
src/build_stream/api/: dependencies.py
src/build_stream/containers/: build_images.sh
src/build_stream/containers/omnia_build_stream/: Containerfile  pyproject.toml
src/containers/: README.md  _common.sh  build_images.sh
src/discovery/: CONTRACTS.md  ansible.cfg  discovery.yml
src/examples/: additional_cloud_init.yml  pxe_mapping_file.csv  rhel_software_config.json
src/image_build_manager/: IMAGE_BUILDER_DESIGN.md  INPUT_CONTRACT.md  OUTPUT_CONTRACT.md  REFACTORING_SUMMARY.md  ansible.cfg  image_build_manager.yml
src/input/: local_repo_config.yml  network_spec.yml  provision_config.yml  software_config.json  storage_config.yml  telemetry_config.yml  telemetry_storage_config.yml
src/main/: omnia.sh
src/main/containers/omnia_core/: Containerfile  pyproject.toml
src/orchestrator/: .gitignore  CONTRACTS.md  Makefile  ansible.cfg  orchestrator.yml
src/playbooks/: ansible.cfg
src/rpm_build/: README.md  build_rpm.sh
src/utils/: ansible.cfg  slurm_config_util.yml
utils/gui/: README.md
(+930 files in other folders)
