[project]
name = "omnia_core"
version = "0.1.0"
description = "Python environment for the Omnia Core container."
requires-python = ">= 3.12"
dependencies = [
    "psycopg2-binary==2.9.11",
    "requests>=2.33.0",
    "pyarrow==22.0.0",
    "pandas==2.3.3",
    "passlib==1.7.4",
    "pulp-cli==0.40.1",
    "pygments>=2.20.0",
    "netaddr==1.3.0",
    "pexpect==4.9.0",
    "psutil==7.1.3",
    "pyyaml==6.0.3",
    "PyMySQL==1.1.2",
    "omsdk==1.2.518",
    "pysnmp==7.1.22",
    "kubernetes==32.0.1",
    "cryptography==48.0.0",
    "logger==1.4",
    "prettytable==3.14.0",
    "toml==0.10.2",
    "http_client==0.1.22",
    "gitPython==3.1.50",
    "ansible-lint==25.6.1",
    "jmespath==1.0.1",
    "urllib3==2.7.0",
    "pyasn1==0.6.3",
    "filelock==3.20.3",
    "wheel==0.46.2",
    "ansible-core==2.20.7",
    "jaraco.context>=6.1.0"
]


[tool.uv]
override-dependencies = [
    "requests>=2.33.0",
    "click>=8.4.1",
]
